# rhine-monomer

./: CHANGELOG.md  README.md  flake.nix  rhine-monomer.cabal
src/FRP/Rhine/: Monomer.hs
src/FRP/Rhine/Monomer/: Generic.hs
test/: Main.hs
